# OSBA

./: LICENSE  ReadMe.md  pyproject.toml
instructions/: Instructions.md
software/app/: .env.example  .gitignore  App.md  app.py
software/app/wallet/: index.html
